--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
             </svg>
           </div>
           <div>
-            <div class="title">حضانة  مودرن</div>
+            <div class="title">حضانة براعم مودرن</div>
             <div class="subtitle">رعاية، تعلم، ومرح بأمان</div>
           </div>
         </div>
