--- a/register.html
+++ b/register.html
@@ -5,7 +5,16 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>تسجيل طفل - حضانة براعم مودرن</title>
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="login.css">
+    <style>
+    .form-wrap input, .form-wrap select, .form-wrap textarea {
+      width: 100%; padding: 12px; border: 1px solid #ddd; border-radius: 8px; 
+      font-size: 16px; box-sizing: border-box; margin-bottom: 16px;
+    }
+    .form-wrap label { display: block; margin-bottom: 6px; font-weight: 600; color: #333; }
+    .form-actions { display: flex; gap: 16px; justify-content: space-between; flex-wrap: wrap; }
+    @media (max-width: 480px) { .form-actions { flex-direction: column; } }
+  </style>
   </head>
   <body>
     <div class="bg-pattern" aria-hidden="true"></div>
@@ -13,9 +22,13 @@
       <header class="header">
         <div class="brand">
           <div class="logo" aria-hidden="true">
+            <!-- flower icon -->
             <svg viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg"
               aria-hidden="true">
               <circle cx="32" cy="32" r="6" fill="#ffd9e0" />
+              <path
+                d="M32 8c5 6 12 7 16 3s3-11-3-16c-6 5-13 4-13 4s-7 1-13-4C13 0 11 6 15 10s11 3 16-3z"
+                fill="#fff" />
               <g fill="#ffe2b3" opacity="0.9">
                 <ellipse cx="20" cy="28" rx="8" ry="12" />
                 <ellipse cx="44" cy="28" rx="8" ry="12" />
@@ -28,77 +41,186 @@
             <div class="subtitle">رعاية، تعلم، ومرح بأمان</div>
           </div>
         </div>
-
         <nav class="nav" aria-label="القائمة الرئيسية">
           <a href="index.html">الرئيسية</a>
-          <a href="register.html">تسجيل طفل</a>
           <a class="btn secondary" href="reservations.html">حجوزات اليوم</a>
-          <a class="btn" href="login.html">تسجيل الدخول</a>
         </nav>
       </header>
 
       <main>
-        <section class="form-wrap card">
-          <h3 class="center">نموذج تسجيل طفل جديد</h3>
-          <form onsubmit="fakeRegister(event)">
-            <label>اسم الطفل</label>
-            <input type="text" name="child_name" required>
+        <section class="form-wrap card" role="main">
+          <h1 class="center">نموذج تسجيل طفل جديد</h1>
+          <p class="center small">املأ البيانات التالية لبدء عملية التسجيل</p>
 
-            <label>تاريخ الميلاد</label>
-            <input type="date" name="dob" required>
-
-            <label>الجنس</label>
-            <select name="gender" required>
-              <option value>اختر</option>
-              <option>ذكر</option>
-              <option>أنثى</option>
-            </select>
-
-            <label>اسم ولي الأمر</label>
-            <input type="text" name="parent_name" required>
-
-            <label>هاتف ولي الأمر</label>
-            <input type="tel" name="parent_phone" required>
-
-            <label>ملاحظات طبية / تحسس</label>
-            <textarea name="medical"></textarea>
-
-            <div class="form-actions">
-              <a class="small" href="index.html">العودة</a>
-              <button class="btn" type="submit">إرسال التسجيل</button>
+          <form id="registerForm" novalidate>
+            <div class="field">
+              <label for="child_name">اسم الطفل *</label>
+              <input type="text" id="child_name" name="child_name" required
+                maxlength="100">
             </div>
-          </form>
-        </section>
-      </main>
+
+            <div class="field">
+              <label for="dob">تاريخ الميلاد *</label>
+              <input type="date" id="dob" name="dob" required max>
+            </div>
+
+            <div class="field">
+              <label for="gender">الجنس *</label>
+              <select id="gender" name="gender" required>
+                <option value>اختر الجنس</option>
+                <option value="ذكر">ذكر</option>
+                <option value="أنثى">أنثى</option>
+              </select>
+            </div>
+            <div class="field">
+              <label for="classId">اختر الفصل *</label>
+              <select id="classId" name="classId" required>
+                <option value="">-- اختر الفصل --</option>
+                <option value="A">فصل A</option>
+                <option value="B">فصل B</option>
+                <option value="C">فصل C</option>
+              </select>
+              <div id="classCount" style="font-size:14px;color:#555"></div>
+            </div>
+            <div class="field">
+              <label for="parent_name">اسم ولي الأمر *</label>
+              <input type="text" id="parent_name" name="parent_name" required
+                maxlength="100">
+            </div>
+            <div class="field">
+              <label for="receiver">اسم الشخص الذي سيستلم الطفل *</label>
+              <input type="text" id="receiver" name="receiver" required
+                maxlength="100">
+              <div class="field">
+                <label for="parent_phone">رقم الهاتف *</label>
+                <input type="tel" id="parent_phone" name="parent_phone" required
+                  pattern="[0-9]{10,15}" placeholder="01xxxxxxxxx">
+              </div>
+
+              <div class="field">
+                <label for="medical">ملاحظات طبية أو حساسية</label>
+                <textarea id="medical" name="medical" rows="4"
+                  placeholder="مثال: حساسية من المكسرات..."></textarea>
+              </div>
+
+              <div class="form-actions">
+                <a class="small" href="index.html">← العودة للرئيسية</a>
+                <button class="btn primary" type="submit">
+                  <span class="btn-text">إرسال التسجيل</span>
+                </button>
+              </div>
+            </form>
+          </section>
+        </main>
 
       <footer class="footer">
         <div>
-          <div class="title">حضانة براعم مودرن
-          </div>
+          <div class="title">حضانة براعم مودرن</div>
           <div class="copy">© 2025 - جميع الحقوق محفوظة</div>
         </div>
         <div class="socials">
           <a href="https://wa.me/201098765432" target="_blank"
-            rel="noopener">واتساب</a>
-          <a href="mailto:info@example.com">البريد الإلكتروني</a>
+            rel="noopener"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><path d="M476.9 161.1C435 119.1 379.2 96 319.9 96C197.5 96 97.9 195.6 97.9 318C97.9 357.1 108.1 395.3 127.5 429L96 544L213.7 513.1C246.1 530.8 282.6 540.1 319.8 540.1L319.9 540.1C442.2 540.1 544 440.5 544 318.1C544 258.8 518.8 203.1 476.9 161.1zM319.9 502.7C286.7 502.7 254.2 493.8 225.9 477L219.2 473L149.4 491.3L168 423.2L163.6 416.2C145.1 386.8 135.4 352.9 135.4 318C135.4 216.3 218.2 133.5 320 133.5C369.3 133.5 415.6 152.7 450.4 187.6C485.2 222.5 506.6 268.8 506.5 318.1C506.5 419.9 421.6 502.7 319.9 502.7zM421.1 364.5C415.6 361.7 388.3 348.3 383.2 346.5C378.1 344.6 374.4 343.7 370.7 349.3C367 354.9 356.4 367.3 353.1 371.1C349.9 374.8 346.6 375.3 341.1 372.5C308.5 356.2 287.1 343.4 265.6 306.5C259.9 296.7 271.3 297.4 281.9 276.2C283.7 272.5 282.8 269.3 281.4 266.5C280 263.7 268.9 236.4 264.3 225.3C259.8 214.5 255.2 216 251.8 215.8C248.6 215.6 244.9 215.6 241.2 215.6C237.5 215.6 231.5 217 226.4 222.5C221.3 228.1 207 241.5 207 268.8C207 296.1 226.9 322.5 229.6 326.2C232.4 329.9 268.7 385.9 324.4 410C359.6 425.2 373.4 426.5 391 423.9C401.7 422.3 423.8 410.5 428.4 397.5C433 384.5 433 373.4 431.6 371.1C430.3 368.6 426.6 367.2 421.1 364.5z"/></svg></a>
           <a href="https://www.facebook.com" target="_blank"
-            rel="noopener">فيسبوك</a>
+            rel="noopener"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><path d="M576 320C576 178.6 461.4 64 320 64C178.6 64 64 178.6 64 320C64 440 146.7 540.8 258.2 568.5L258.2 398.2L205.4 398.2L205.4 320L258.2 320L258.2 286.3C258.2 199.2 297.6 158.8 383.2 158.8C399.4 158.8 427.4 162 438.9 165.2L438.9 236C432.9 235.4 422.4 235 409.3 235C367.3 235 351.1 250.9 351.1 292.2L351.1 320L434.7 320L420.3 398.2L351 398.2L351 574.1C477.8 558.8 576 450.9 576 320z"/></svg></wa-icon></a>
           <a href="https://www.instagram.com" target="_blank"
-            rel="noopener">إنستجرام</a>
+            rel="noopener"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><path d="M320.3 205C256.8 204.8 205.2 256.2 205 319.7C204.8 383.2 256.2 434.8 319.7 435C383.2 435.2 434.8 383.8 435 320.3C435.2 256.8 383.8 205.2 320.3 205zM319.7 245.4C360.9 245.2 394.4 278.5 394.6 319.7C394.8 360.9 361.5 394.4 320.3 394.6C279.1 394.8 245.6 361.5 245.4 320.3C245.2 279.1 278.5 245.6 319.7 245.4zM413.1 200.3C413.1 185.5 425.1 173.5 439.9 173.5C454.7 173.5 466.7 185.5 466.7 200.3C466.7 215.1 454.7 227.1 439.9 227.1C425.1 227.1 413.1 215.1 413.1 200.3zM542.8 227.5C541.1 191.6 532.9 159.8 506.6 133.6C480.4 107.4 448.6 99.2 412.7 97.4C375.7 95.3 264.8 95.3 227.8 97.4C192 99.1 160.2 107.3 133.9 133.5C107.6 159.7 99.5 191.5 97.7 227.4C95.6 264.4 95.6 375.3 97.7 412.3C99.4 448.2 107.6 480 133.9 506.2C160.2 532.4 191.9 540.6 227.8 542.4C264.8 544.5 375.7 544.5 412.7 542.4C448.6 540.7 480.4 532.5 506.6 506.2C532.8 480 541 448.2 542.8 412.3C544.9 375.3 544.9 264.5 542.8 227.5zM495 452C487.2 471.6 472.1 486.7 452.4 494.6C422.9 506.3 352.9 503.6 320.3 503.6C287.7 503.6 217.6 506.2 188.2 494.6C168.6 486.8 153.5 471.7 145.6 452C133.9 422.5 136.6 352.5 136.6 319.9C136.6 287.3 134 217.2 145.6 187.8C153.4 168.2 168.5 153.1 188.2 145.2C217.7 133.5 287.7 136.2 320.3 136.2C352.9 136.2 423 133.6 452.4 145.2C472 153 487.1 168.1 495 187.8C506.7 217.3 504 287.3 504 319.9C504 352.5 506.7 422.6 495 452z"/></svg></a>
           <a href="https://www.google.com/maps" target="_blank"
-            rel="noopener">الخريطة</a>
+            rel="noopener"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><path d="M128 252.6C128 148.4 214 64 320 64C426 64 512 148.4 512 252.6C512 371.9 391.8 514.9 341.6 569.4C329.8 582.2 310.1 582.2 298.3 569.4C248.1 514.9 127.9 371.9 127.9 252.6zM320 320C355.3 320 384 291.3 384 256C384 220.7 355.3 192 320 192C284.7 192 256 220.7 256 256C256 291.3 284.7 320 320 320z"/></svg></a>
         </div>
       </footer>
     </div>
-    <div id="toast" class="toast"><strong class="text"></strong></div>
+
+    <div id="toast" class="toast" role="status" aria-live="polite">
+      <strong class="text"></strong>
+    </div>
+
     <script>
-function fakeRegister(e){
-  e.preventDefault();
-  const toast = document.getElementById('toast');
-  toast.querySelector('.text').textContent = 'تم تسجيل الطفل بنجاح!';
-  toast.classList.add('show');
-  setTimeout(()=> toast.classList.remove('show'), 3500);
-}
-</script>
+// ===== إدارة الفصول =====
+    function initClasses() {
+      if (!localStorage.getItem("classes")) {
+        const classes = [
+          { id: "A", name: "فصل A", max: 10, babysitters: ["مريم ممدوح","ايمان عمرو"], children: [] },
+          { id: "B", name: "فصل B", max: 10, babysitters: ["ريهام ماجد","اماني السيد"], children: [] },
+          { id: "C", name: "فصل C", max: 10, babysitters: ["امل باهر","ياسمين صدقي"], children: [] }
+        ];
+        localStorage.setItem("classes", JSON.stringify(classes));
+      }
+    }
+    initClasses();
+
+    document.getElementById("classId").addEventListener("change", function () {
+      const classes = JSON.parse(localStorage.getItem("classes"));
+      const selected = classes.find(c => c.id === this.value);
+
+      document.getElementById("classCount").innerText =
+        selected ? `عدد الأطفال: ${selected.children.length} / 10` : "";
+    });
+
+    // Set max date to today for DOB validation
+    document.getElementById('dob').max = new Date().toISOString().split('T')[0];
+
+    const form = document.getElementById('registerForm');
+    const toast = document.getElementById('toast');
+    const STORAGE_KEY = 'nursery_kids_advanced';
+
+    // حفظ البيانات في LocalStorage بشكل مباشر
+    form.addEventListener('submit', function(e) {
+      e.preventDefault();
+
+      if (!form.checkValidity()) {
+        form.reportValidity();
+        return;
+      }
+
+      const childData = {
+        id: Date.now().toString(),
+        childName: form.child_name.value.trim(),
+        parentName: form.parent_name.value.trim(),
+        phone: form.parent_phone.value.trim(),
+        receiver: form.receiver.value.trim(),
+        entry: new Date().getHours().toString().padStart(2,'0') + ':' + new Date().getMinutes().toString().padStart(2,'0'),
+        left: false,
+        // بيانات إضافية لا تظهر في الجدول
+        dob: form.dob.value,
+        gender: form.gender.value,
+        medical: form.medical.value
+      };
+
+      // جلب القائمة الحالية من LocalStorage
+      const kids = JSON.parse(localStorage.getItem(STORAGE_KEY) || '[]');
+      const classId = document.getElementById("classId").value;
+      const classes = JSON.parse(localStorage.getItem("classes"));
+      const selectedClass = classes.find(c => c.id === classId);
+
+      if (!classId) {
+        alert("من فضلك اختر الفصل");
+        return;
+      }
+
+      if (selectedClass.children.length >= 10) {
+        alert("❌ هذا الفصل مكتمل");
+        return;
+      }
+
+      // ربط الطفل بالفصل
+      childData.classId = classId;
+      selectedClass.children.push(childData);
+      localStorage.setItem("classes", JSON.stringify(classes));
+      kids.push(childData);
+      localStorage.setItem(STORAGE_KEY, JSON.stringify(kids));
+
+      showToast('تم تسجيل الطفل بنجاح!', 'success');
+
+      form.reset();
+    });
+
+    function showToast(message, type = 'success') {
+      toast.querySelector('.text').textContent = message;
+      toast.dataset.type = type;
+      toast.classList.add('show');
+      setTimeout(() => toast.classList.remove('show'), 4000);
+    }
+  </script>
   </body>
 </html>
