--- a/reservations.html
+++ b/reservations.html
@@ -11,41 +11,39 @@
 <body>
   <div class="bg-pattern" aria-hidden="true"></div>
   <div class="container">
-    <header class="header">
-      <div class="brand">
-        <div class="logo" aria-hidden="true">
-          <svg viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-            <circle cx="32" cy="32" r="6" fill="#ffd9e0"/>
-            <path d="M32 8c5 6 12 7 16 3s3-11-3-16c-6 5-13 4-13 4s-7 1-13-4C13 0 11 6 15 10s11 3 16-3z" fill="#fff"/>
-            <g fill="#ffe2b3" opacity="0.9">
-              <ellipse cx="20" cy="28" rx="8" ry="12"/>
-              <ellipse cx="44" cy="28" rx="8" ry="12"/>
-              <ellipse cx="32" cy="44" rx="12" ry="8"/>
-            </g>
-          </svg>
+      <header class="header">
+        <div class="brand">
+          <div class="logo" aria-hidden="true">
+            <!-- flower icon -->
+            <svg viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg"
+              aria-hidden="true">
+              <circle cx="32" cy="32" r="6" fill="#ffd9e0" />
+              <path
+                d="M32 8c5 6 12 7 16 3s3-11-3-16c-6 5-13 4-13 4s-7 1-13-4C13 0 11 6 15 10s11 3 16-3z"
+                fill="#fff" />
+              <g fill="#ffe2b3" opacity="0.9">
+                <ellipse cx="20" cy="28" rx="8" ry="12" />
+                <ellipse cx="44" cy="28" rx="8" ry="12" />
+                <ellipse cx="32" cy="44" rx="12" ry="8" />
+              </g>
+            </svg>
+          </div>
+          <div>
+            <div class="title">حضانة براعم مودرن</div>
+            <div class="subtitle">رعاية، تعلم، ومرح بأمان</div>
+          </div>
         </div>
-        <div>
-          <div class="title">حضانة براعم مودرن</div>
-          <div class="subtitle">رعاية، تعلم، ومرح بأمان</div>
-        </div>
-      </div>
 
-      <nav class="nav" aria-label="القائمة الرئيسية">
-        <a href="index.html">الرئيسية</a>
-        <a href="register.html">تسجيل طفل</a>
-        <a class="btn secondary" href="reservations.html">حجوزات اليوم</a>
-        <a class="btn" href="login.html">تسجيل الدخول</a>
-      </nav>
-    </header>
+        <nav class="nav">
+          <a  href="index.html">الرئيسية </a>
+          <a class="btn secondary" href="register.html">تسجيل طفل</a>
+        </nav>
+      </header>
 
     <main>
       <div class="dashboard-header">
         <div class="header-content">
           <h1>إدارة الحجوزات</h1>
-          <div class="subtitle">إدارة حضور ومغادرة الأطفال بشكل احترافي</div>
-        </div>
-        <div class="header-actions">
-          <button class="btn-primary" id="btnAdd"><span>+ إضافة طفل جديد</span></button>
         </div>
       </div>
 
@@ -84,6 +82,7 @@
             <thead>
               <tr>
                 <th>اسم الطفل</th>
+                <th>الفصل</th>
                 <th>اسم ولي الأمر</th>
                 <th>رقم الهاتف</th>
                 <th>المستلم</th>
@@ -96,21 +95,27 @@
           </table>
         </div>
       </div>
+      <div class="center">
+        <button class="btn-danger btn-action" id="btnClearAll">مسح كل البيانات</button>
+      </div>
     </main>
 
-    <footer class="footer">
-      <div>
-        <div class="title">حضانة براعم مودرن</div>
-        <div class="copy">© 2025 - جميع الحقوق محفوظة</div>
-      </div>
-      <div class="socials">
-        <a href="https://wa.me/201098765432" target="_blank" rel="noopener">واتساب</a>
-        <a href="https://www.google.com/">البريد الإلكتروني</a>
-        <a href="https://www.facebook.com" target="_blank" rel="noopener">فيسبوك</a>
-        <a href="https://www.instagram.com" target="_blank" rel="noopener">إنستجرام</a>
-        <a href="https://www.google.com/maps" target="_blank" rel="noopener">الخريطة</a>
-      </div>
-    </footer>
+      <footer class="footer">
+        <div>
+          <div class="title">حضانة براعم مودرن</div>
+          <div class="copy">© 2025 - جميع الحقوق محفوظة</div>
+        </div>
+        <div class="socials">
+          <a href="https://wa.me/201098765432" target="_blank"
+            rel="noopener"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><path d="M476.9 161.1C435 119.1 379.2 96 319.9 96C197.5 96 97.9 195.6 97.9 318C97.9 357.1 108.1 395.3 127.5 429L96 544L213.7 513.1C246.1 530.8 282.6 540.1 319.8 540.1L319.9 540.1C442.2 540.1 544 440.5 544 318.1C544 258.8 518.8 203.1 476.9 161.1zM319.9 502.7C286.7 502.7 254.2 493.8 225.9 477L219.2 473L149.4 491.3L168 423.2L163.6 416.2C145.1 386.8 135.4 352.9 135.4 318C135.4 216.3 218.2 133.5 320 133.5C369.3 133.5 415.6 152.7 450.4 187.6C485.2 222.5 506.6 268.8 506.5 318.1C506.5 419.9 421.6 502.7 319.9 502.7zM421.1 364.5C415.6 361.7 388.3 348.3 383.2 346.5C378.1 344.6 374.4 343.7 370.7 349.3C367 354.9 356.4 367.3 353.1 371.1C349.9 374.8 346.6 375.3 341.1 372.5C308.5 356.2 287.1 343.4 265.6 306.5C259.9 296.7 271.3 297.4 281.9 276.2C283.7 272.5 282.8 269.3 281.4 266.5C280 263.7 268.9 236.4 264.3 225.3C259.8 214.5 255.2 216 251.8 215.8C248.6 215.6 244.9 215.6 241.2 215.6C237.5 215.6 231.5 217 226.4 222.5C221.3 228.1 207 241.5 207 268.8C207 296.1 226.9 322.5 229.6 326.2C232.4 329.9 268.7 385.9 324.4 410C359.6 425.2 373.4 426.5 391 423.9C401.7 422.3 423.8 410.5 428.4 397.5C433 384.5 433 373.4 431.6 371.1C430.3 368.6 426.6 367.2 421.1 364.5z"/></svg></a>
+          <a href="https://www.facebook.com" target="_blank"
+            rel="noopener"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><path d="M576 320C576 178.6 461.4 64 320 64C178.6 64 64 178.6 64 320C64 440 146.7 540.8 258.2 568.5L258.2 398.2L205.4 398.2L205.4 320L258.2 320L258.2 286.3C258.2 199.2 297.6 158.8 383.2 158.8C399.4 158.8 427.4 162 438.9 165.2L438.9 236C432.9 235.4 422.4 235 409.3 235C367.3 235 351.1 250.9 351.1 292.2L351.1 320L434.7 320L420.3 398.2L351 398.2L351 574.1C477.8 558.8 576 450.9 576 320z"/></svg></wa-icon></a>
+          <a href="https://www.instagram.com" target="_blank"
+            rel="noopener"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><path d="M320.3 205C256.8 204.8 205.2 256.2 205 319.7C204.8 383.2 256.2 434.8 319.7 435C383.2 435.2 434.8 383.8 435 320.3C435.2 256.8 383.8 205.2 320.3 205zM319.7 245.4C360.9 245.2 394.4 278.5 394.6 319.7C394.8 360.9 361.5 394.4 320.3 394.6C279.1 394.8 245.6 361.5 245.4 320.3C245.2 279.1 278.5 245.6 319.7 245.4zM413.1 200.3C413.1 185.5 425.1 173.5 439.9 173.5C454.7 173.5 466.7 185.5 466.7 200.3C466.7 215.1 454.7 227.1 439.9 227.1C425.1 227.1 413.1 215.1 413.1 200.3zM542.8 227.5C541.1 191.6 532.9 159.8 506.6 133.6C480.4 107.4 448.6 99.2 412.7 97.4C375.7 95.3 264.8 95.3 227.8 97.4C192 99.1 160.2 107.3 133.9 133.5C107.6 159.7 99.5 191.5 97.7 227.4C95.6 264.4 95.6 375.3 97.7 412.3C99.4 448.2 107.6 480 133.9 506.2C160.2 532.4 191.9 540.6 227.8 542.4C264.8 544.5 375.7 544.5 412.7 542.4C448.6 540.7 480.4 532.5 506.6 506.2C532.8 480 541 448.2 542.8 412.3C544.9 375.3 544.9 264.5 542.8 227.5zM495 452C487.2 471.6 472.1 486.7 452.4 494.6C422.9 506.3 352.9 503.6 320.3 503.6C287.7 503.6 217.6 506.2 188.2 494.6C168.6 486.8 153.5 471.7 145.6 452C133.9 422.5 136.6 352.5 136.6 319.9C136.6 287.3 134 217.2 145.6 187.8C153.4 168.2 168.5 153.1 188.2 145.2C217.7 133.5 287.7 136.2 320.3 136.2C352.9 136.2 423 133.6 452.4 145.2C472 153 487.1 168.1 495 187.8C506.7 217.3 504 287.3 504 319.9C504 352.5 506.7 422.6 495 452z"/></svg></a>
+          <a href="https://www.google.com/maps" target="_blank"
+            rel="noopener"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><path d="M128 252.6C128 148.4 214 64 320 64C426 64 512 148.4 512 252.6C512 371.9 391.8 514.9 341.6 569.4C329.8 582.2 310.1 582.2 298.3 569.4C248.1 514.9 127.9 371.9 127.9 252.6zM320 320C355.3 320 384 291.3 384 256C384 220.7 355.3 192 320 192C284.7 192 256 220.7 256 256C256 291.3 284.7 320 320 320z"/></svg></a>
+        </div>
+      </footer>
   </div>
 
   <div class="modal-overlay" id="modalOverlay">
@@ -119,6 +124,245 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+<script>
+// =======================
+// 1) التعريفات الأساسية
+// =======================
+const STORAGE_KEY = 'nursery_kids_advanced';
+let kids = JSON.parse(localStorage.getItem(STORAGE_KEY) || '[]');
+
+// =======================
+// 2) عناصر DOM
+// =======================
+const tableBody = document.getElementById('tableBody');
+const searchInput = document.getElementById('searchInput');
+const clearSearch = document.getElementById('clearSearch');
+const modalOverlay = document.getElementById('modalOverlay');
+const modalContent = document.getElementById('modalContent');
+const btnClearAll = document.getElementById('btnClearAll');
+
+// =======================
+// 3) دوال مساعدة
+// =======================
+function saveKids(arr) {
+  localStorage.setItem(STORAGE_KEY, JSON.stringify(arr));
+}
+
+function nowHHMM() {
+  const now = new Date();
+  return now.getHours().toString().padStart(2,'0') + ':' + now.getMinutes().toString().padStart(2,'0');
+}
+
+function calcDuration(start, end) {
+  const [h1, m1] = start.split(':').map(Number);
+  const [h2, m2] = end.split(':').map(Number);
+  let total = (h2*60 + m2) - (h1*60 + m1);
+  if(total < 0) total += 1440;
+  const h = Math.floor(total / 60);
+  const m = total % 60;
+  return `${h} ساعة ${m} دقيقة`;
+}
+
+function openModal(html) {
+  modalContent.innerHTML = html;
+  modalOverlay.classList.add('active');
+}
+
+function closeModal() {
+  modalOverlay.classList.remove('active');
+}
+
+// =======================
+// 4) تحديث الإحصائيات
+// =======================
+function updateStats() {
+  document.getElementById('totalChildren').textContent = kids.length;
+  document.getElementById('presentChildren').textContent = kids.filter(k => !k.left).length;
+  document.getElementById('leftChildren').textContent = kids.filter(k => k.left).length;
+}
+
+// =======================
+// 5) عرض الجدول
+// =======================
+function renderTable(filter='') {
+  const f = filter.toLowerCase();
+  const list = kids.filter(k =>
+    !f ||
+    k.childName.toLowerCase().includes(f) ||
+    k.parentName.toLowerCase().includes(f) ||
+    k.phone.includes(f) ||
+    k.receiver.toLowerCase().includes(f)
+  );
+
+  tableBody.innerHTML = '';
+
+  if(list.length === 0) {
+    tableBody.innerHTML = `<tr><td colspan="8" style="text-align:center;padding:40px;color:#a0aec0;">لا يوجد أطفال</td></tr>`;
+    updateStats();
+    return;
+  }
+
+  list.forEach(kid => {
+    const row = document.createElement('tr');
+    row.innerHTML = `
+      <td>${kid.childName}</td>
+      <td>${kid.classId || 'غير محدد'}</td>
+      <td>${kid.parentName}</td>
+      <td dir="ltr">${kid.phone}</td>
+      <td>${kid.receiver}</td>
+      <td>${kid.entry}</td>
+      <td><span class="status-badge ${kid.left ? 'status-left' : 'status-present'}">${kid.left ? 'تمت المغادرة' : 'موجود'}</span></td>
+      <td>
+        ${kid.left
+          ? `<button class="btn-action btn-delete" data-id="${kid.id}">حذف</button>`
+          : `<button class="btn-action btn-checkout" data-id="${kid.id}">تسجيل مغادرة</button>`
+        }
+      </td>
+    `;
+    tableBody.appendChild(row);
+  });
+
+  // ربط أزرار الحذف
+  document.querySelectorAll('.btn-delete').forEach(b => {
+    b.onclick = e => {
+      const id = e.target.dataset.id;
+      if(!confirm('هل أنت متأكد من حذف هذا الطفل؟')) return;
+      kids = kids.filter(k => k.id !== id);
+      saveKids(kids);
+      renderTable(searchInput.value);
+    };
+  });
+
+  // ربط أزرار المغادرة
+  document.querySelectorAll('.btn-checkout').forEach(b => {
+    b.onclick = e => openCheckoutModal(e.target.dataset.id);
+  });
+
+  updateStats();
+}
+
+// =======================
+// 6) تسجيل المغادرة
+// =======================
+function openCheckoutModal(id) {
+  const kid = kids.find(k => k.id === id);
+  if (!kid) return;
+
+  const exitTime = nowHHMM();
+  const duration = calcDuration(kid.entry, exitTime); // "X ساعة Y دقيقة"
+
+  // حساب السعر
+  const [hours, minutes] = duration.match(/(\d+) ساعة (\d+) دقيقة/).slice(1,3).map(Number);
+  const price = hours * 25 + Math.ceil(minutes / 60 * 25); // أي دقيقة إضافية تعتبر ساعة كاملة
+
+  openModal(`
+    <h3>تسجيل مغادرة الطفل</h3>
+    <p><strong>الطفل: </strong>${kid.childName}</p>
+    <p><strong>ولي الامر: </strong> ${kid.parentName}</p>
+    <p><strong>الدخول:</strong> ${kid.entry} ← <strong>الخروج:</strong> ${exitTime}</p>
+    <p><strong>المدة:</strong> ${duration}</p>
+    <p><strong>السعر:</strong> ${price} جنيه</p>
+    <div class="modal-actions">
+      <button class="btn-outline" id="cancelLeave">إلغاء</button>
+      <button class="btn-primary" id="confirmLeave">تأكيد المغادرة</button>
+    </div>
+  `);
+
+  document.getElementById('cancelLeave').onclick = closeModal;
+
+  document.getElementById('confirmLeave').onclick = () => {
+    kid.left = true;
+    kid.exit = exitTime;
+    kid.duration = duration;
+    kid.price = price; // إضافة السعر للطفل
+    saveKids(kids);
+
+    const classes = JSON.parse(localStorage.getItem('classes') || '[]');
+    classes.forEach(c => {
+      c.children = c.children ? c.children.filter(child => child.id !== id) : [];
+    });
+    localStorage.setItem('classes', JSON.stringify(classes));
+
+    renderTable(searchInput.value);
+    closeModal();
+  };
+}
+
+// =======================
+// 7) البحث
+// =======================
+searchInput.oninput = e => renderTable(e.target.value);
+clearSearch.onclick = () => {
+  searchInput.value = '';
+  renderTable('');
+};
+
+// =======================
+// 8) مسح كل البيانات
+// =======================
+btnClearAll.onclick = () => {
+  openModal(`
+    <h3>مسح كل البيانات</h3>
+    <p>هل أنت متأكد أنك تريد مسح كل بيانات الأطفال؟ هذا الإجراء لا يمكن التراجع عنه.</p>
+    <button class="btn-outline" id="cancelLeave">إلغاء</button>
+    <button class="btn-primary" id="confirmLeave">تأكيد</button>
+  `);
+  document.getElementById('cancelLeave').onclick = closeModal;
+  document.getElementById('confirmLeave').onclick = () => {
+    kids = [];
+    saveKids(kids);
+    renderTable('');
+    closeModal();
+  };
+};
+
+// =======================
+// 9) إغلاق المودال
+// =======================
+document.addEventListener('keydown', e => { if(e.key==='Escape') closeModal(); });
+modalOverlay.onclick = e => { if(e.target===modalOverlay) closeModal(); };
+
+// =======================
+// 10) دمج بيانات صفحة التسجيل
+// =======================
+function mergeRegistrationData() {
+  const saved = localStorage.getItem('childRegistration');
+  if(!saved) return;
+
+  try {
+    const regData = JSON.parse(saved);
+    if(!regData.child_name || !regData.parent_name) return;
+    const exists = kids.some(k => k.childName === regData.child_name && k.parentName === regData.parent_name);
+    if(exists) return;
+
+    const newKid = {
+      id: Date.now().toString(),
+      childName: regData.child_name,
+      parentName: regData.parent_name,
+      phone: regData.parent_phone || '',
+      receiver: "لا يوجد",
+      entry: nowHHMM(),
+      left: false,
+      dob: regData.dob || '',
+      gender: regData.gender || '',
+      medical: regData.medical || ''
+    };
+
+    kids.unshift(newKid);
+    saveKids(kids);
+    localStorage.removeItem('childRegistration');
+  } catch(e) {
+    console.error("خطأ في دمج بيانات صفحة التسجيل:", e);
+  }
+}
+
+// =======================
+// 11) التحميل الأولي
+// =======================
+mergeRegistrationData();
+renderTable();
+
+</script>
+
 </body>
 </html>
